fixed alignment

--- a/style.css
+++ b/style.css
@@ -295,9 +295,6 @@ li{
     margin-left: 20px;
     display: none;
 }
-p{
-    text-align: center;
-}
 
 /*-------------------- all products page ----------------- */
 
